--- a/app/src/main/res/layout/layout_goods_spec_jingangwang.xml
+++ b/app/src/main/res/layout/layout_goods_spec_jingangwang.xml
@@ -66,12 +66,13 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:layout_marginTop="15dp"
-                android:tag="2"
+                android:tag="1"
                 android:orientation="horizontal">
 
                 <TextView
@@ -79,7 +80,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:text="主丝*次丝\n(内丝径mm)"
+                    android:text="丝径(#)"
                     android:textSize="14dp"
                     android:textColor="@color/text_black_color"/>
 
@@ -91,31 +92,7 @@
                     android:orientation="horizontal">
 
                     <EditText
-                        android:layout_width="80dp"
-                        android:layout_height="wrap_content"
-                        android:inputType="number|numberDecimal"
-                        android:background="@drawable/gid_background"
-                        android:gravity="center"
-                        android:hint=""
-                        android:padding="5dp"
-                        android:maxLines="1"
-                        android:singleLine="true"
-                        android:imeOptions="actionNext"
-                        android:textColor="@color/text_black_color"
-                        android:textColorHint="@color/light_gray_color"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="*"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:textSize="14sp"
-                        android:textColor="@color/text_black_color"/>
-
-                    <EditText
-                        android:layout_width="80dp"
+                        android:layout_width="180dp"
                         android:layout_height="wrap_content"
                         android:inputType="number|numberDecimal"
                         android:background="@drawable/gid_background"
@@ -132,98 +109,6 @@
             </LinearLayout>
 
 
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:layout_marginTop="15dp"
-                android:tag="3"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="right"
-                    android:text="拧股方式"
-                    android:textSize="14dp"
-                    android:textColor="@color/text_black_color"/>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="12dp"
-                    android:layout_weight="2.5"
-                    android:orientation="horizontal">
-
-                    <RadioGroup
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:button="@null"
-                            android:gravity="center_vertical"
-                            android:drawableLeft="@drawable/selector_checkbox_blue_round"
-                            android:drawablePadding="3dp"
-                            android:text="正拧"
-                            android:textColor="@color/text_black_color"
-                            android:textSize="14sp"/>
-
-                        <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:button="@null"
-                            android:gravity="center_vertical"
-                            android:layout_marginLeft="10dp"
-                            android:drawableLeft="@drawable/selector_checkbox_blue_round"
-                            android:drawablePadding="3dp"
-                            android:text="反拧"
-                            android:textColor="@color/text_black_color"
-                            android:textSize="14sp"/>
-
-                        <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:button="@null"
-                            android:gravity="center_vertical"
-                            android:layout_marginLeft="10dp"
-                            android:drawableLeft="@drawable/selector_checkbox_blue_round"
-                            android:drawablePadding="3dp"
-                            android:text="其他"
-                            android:textColor="@color/text_black_color"
-                            android:textSize="14sp"/>
-                    </RadioGroup>
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="19dp">
-
-                        <EditText
-                            android:layout_width="match_parent"
-                            android:layout_height="18dp"
-                            android:paddingLeft="3dp"
-                            android:background="@null"
-                            android:maxLines="1"
-                            android:singleLine="true"
-                            android:gravity="center"
-                            android:textSize="12sp"
-                            android:textColor="@color/text_black_color"
-                            android:textColorHint="@color/light_gray_color"/>
-
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="0.5dp"
-                            android:background="@color/text_black_color"
-                            android:layout_alignParentBottom="true"/>
-
-                    </RelativeLayout>
-
-                </LinearLayout>
-            </LinearLayout>
 
 
 
@@ -240,7 +125,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:text="刺长(cm)"
+                    android:text="目数(目)"
                     android:textSize="14dp"
                     android:textColor="@color/text_black_color"/>
 
@@ -252,73 +137,7 @@
                     android:orientation="horizontal">
 
                     <EditText
-                        android:layout_width="80dp"
-                        android:layout_height="wrap_content"
-                        android:inputType="number|numberDecimal"
-                        android:background="@drawable/gid_background"
-                        android:gravity="center"
-                        android:hint=""
-                        android:padding="5dp"
-                        android:maxLines="1"
-                        android:singleLine="true"
-                        android:imeOptions="actionNext"
-                        android:textColor="@color/text_black_color"
-                        android:textColorHint="@color/light_gray_color"
-                        android:textSize="14sp" />
-                </LinearLayout>
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:layout_marginTop="15dp"
-                android:tag="2"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="right"
-                    android:text="刺距(cm)"
-                    android:textSize="14dp"
-                    android:textColor="@color/text_black_color"/>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="12dp"
-                    android:layout_weight="2.5"
-                    android:orientation="horizontal">
-
-                    <EditText
-                        android:layout_width="80dp"
-                        android:layout_height="wrap_content"
-                        android:inputType="number|numberDecimal"
-                        android:background="@drawable/gid_background"
-                        android:gravity="center"
-                        android:hint=""
-                        android:padding="5dp"
-                        android:maxLines="1"
-                        android:singleLine="true"
-                        android:imeOptions="actionNext"
-                        android:textColor="@color/text_black_color"
-                        android:textColorHint="@color/light_gray_color"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="*"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:textSize="14sp"
-                        android:textColor="@color/text_black_color"/>
-
-                    <EditText
-                        android:layout_width="80dp"
+                        android:layout_width="180dp"
                         android:layout_height="wrap_content"
                         android:inputType="number|numberDecimal"
                         android:background="@drawable/gid_background"
@@ -349,7 +168,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:text="重量(kg)"
+                    android:text="长(m)"
                     android:textSize="14dp"
                     android:textColor="@color/text_black_color"/>
 
@@ -361,7 +180,51 @@
                     android:orientation="horizontal">
 
                     <EditText
-                        android:layout_width="80dp"
+                        android:layout_width="180dp"
+                        android:layout_height="wrap_content"
+                        android:inputType="number|numberDecimal"
+                        android:background="@drawable/gid_background"
+                        android:gravity="center"
+                        android:hint=""
+                        android:padding="5dp"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:imeOptions="actionNext"
+                        android:text="31.5"
+                        android:textColor="@color/text_black_color"
+                        android:textColorHint="@color/light_gray_color"
+                        android:textSize="14sp" />
+                </LinearLayout>
+            </LinearLayout>
+
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:layout_marginTop="15dp"
+                android:tag="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:text="宽(m)"
+                    android:textSize="14dp"
+                    android:textColor="@color/text_black_color"/>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:layout_weight="2.5"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:layout_width="180dp"
                         android:layout_height="wrap_content"
                         android:inputType="number|numberDecimal"
                         android:background="@drawable/gid_background"
@@ -376,6 +239,94 @@
                         android:textSize="14sp" />
                 </LinearLayout>
             </LinearLayout>
+
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:layout_marginTop="15dp"
+                android:tag="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:text="每平重量(kg)"
+                    android:textSize="14dp"
+                    android:textColor="@color/text_black_color"/>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:layout_weight="2.5"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:layout_width="180dp"
+                        android:layout_height="wrap_content"
+                        android:inputType="number|numberDecimal"
+                        android:background="@drawable/gid_background"
+                        android:gravity="center"
+                        android:hint=""
+                        android:padding="5dp"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:imeOptions="actionNext"
+                        android:textColor="@color/text_black_color"
+                        android:textColorHint="@color/light_gray_color"
+                        android:textSize="14sp" />
+                </LinearLayout>
+            </LinearLayout>
+
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:layout_marginTop="15dp"
+                android:tag="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:text="每卷重量(kg)"
+                    android:textSize="14dp"
+                    android:textColor="@color/text_black_color"/>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:layout_weight="2.5"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:layout_width="180dp"
+                        android:layout_height="wrap_content"
+                        android:inputType="number|numberDecimal"
+                        android:background="@drawable/gid_background"
+                        android:gravity="center"
+                        android:hint=""
+                        android:padding="5dp"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:imeOptions="actionNext"
+                        android:textColor="@color/text_black_color"
+                        android:textColorHint="@color/light_gray_color"
+                        android:textSize="14sp" />
+                </LinearLayout>
+            </LinearLayout>
+
+
 
 
         </LinearLayout>
@@ -426,7 +377,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:text="价格(元/kg)"
+                    android:text="价格(元/平米)"
                     android:textSize="14dp"
                     android:textColor="@color/text_black_color"/>
 
@@ -469,7 +420,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:text="库存(kg)"
+                    android:text="库存(平米)"
                     android:textSize="14dp"
                     android:textColor="@color/text_black_color"/>
 
