--- a/app/src/main/res/layout/activity_release_stock_goods.xml
+++ b/app/src/main/res/layout/activity_release_stock_goods.xml
@@ -38,7 +38,8 @@
             <LinearLayout
                 android:id="@+id/llContent"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:layout_marginTop="10dp"
                 android:orientation="vertical">
 
