--- a/app/src/main/res/layout/layout_goods_spec_heitiesi.xml
+++ b/app/src/main/res/layout/layout_goods_spec_heitiesi.xml
@@ -66,166 +66,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:layout_marginTop="15dp"
-                android:tag="2"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="right"
-                    android:text="主丝*次丝\n(内丝径mm)"
-                    android:textSize="14dp"
-                    android:textColor="@color/text_black_color"/>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="12dp"
-                    android:layout_weight="2.5"
-                    android:orientation="horizontal">
-
-                    <EditText
-                        android:layout_width="80dp"
-                        android:layout_height="wrap_content"
-                        android:inputType="number|numberDecimal"
-                        android:background="@drawable/gid_background"
-                        android:gravity="center"
-                        android:hint=""
-                        android:padding="5dp"
-                        android:maxLines="1"
-                        android:singleLine="true"
-                        android:imeOptions="actionNext"
-                        android:textColor="@color/text_black_color"
-                        android:textColorHint="@color/light_gray_color"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="*"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:textSize="14sp"
-                        android:textColor="@color/text_black_color"/>
-
-                    <EditText
-                        android:layout_width="80dp"
-                        android:layout_height="wrap_content"
-                        android:inputType="number|numberDecimal"
-                        android:background="@drawable/gid_background"
-                        android:gravity="center"
-                        android:hint=""
-                        android:padding="5dp"
-                        android:maxLines="1"
-                        android:singleLine="true"
-                        android:imeOptions="actionNext"
-                        android:textColor="@color/text_black_color"
-                        android:textColorHint="@color/light_gray_color"
-                        android:textSize="14sp" />
-                </LinearLayout>
-            </LinearLayout>
-
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:layout_marginTop="15dp"
-                android:tag="3"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="right"
-                    android:text="拧股方式"
-                    android:textSize="14dp"
-                    android:textColor="@color/text_black_color"/>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="12dp"
-                    android:layout_weight="2.5"
-                    android:orientation="horizontal">
-
-                    <RadioGroup
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:button="@null"
-                            android:gravity="center_vertical"
-                            android:drawableLeft="@drawable/selector_checkbox_blue_round"
-                            android:drawablePadding="3dp"
-                            android:text="正拧"
-                            android:textColor="@color/text_black_color"
-                            android:textSize="14sp"/>
-
-                        <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:button="@null"
-                            android:gravity="center_vertical"
-                            android:layout_marginLeft="10dp"
-                            android:drawableLeft="@drawable/selector_checkbox_blue_round"
-                            android:drawablePadding="3dp"
-                            android:text="反拧"
-                            android:textColor="@color/text_black_color"
-                            android:textSize="14sp"/>
-
-                        <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:button="@null"
-                            android:gravity="center_vertical"
-                            android:layout_marginLeft="10dp"
-                            android:drawableLeft="@drawable/selector_checkbox_blue_round"
-                            android:drawablePadding="3dp"
-                            android:text="其他"
-                            android:textColor="@color/text_black_color"
-                            android:textSize="14sp"/>
-                    </RadioGroup>
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="19dp">
-
-                        <EditText
-                            android:layout_width="match_parent"
-                            android:layout_height="18dp"
-                            android:paddingLeft="3dp"
-                            android:background="@null"
-                            android:maxLines="1"
-                            android:singleLine="true"
-                            android:gravity="center"
-                            android:textSize="12sp"
-                            android:textColor="@color/text_black_color"
-                            android:textColorHint="@color/light_gray_color"/>
-
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="0.5dp"
-                            android:background="@color/text_black_color"
-                            android:layout_alignParentBottom="true"/>
-
-                    </RelativeLayout>
-
-                </LinearLayout>
-            </LinearLayout>
-
-
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -240,116 +80,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:text="刺长(cm)"
-                    android:textSize="14dp"
-                    android:textColor="@color/text_black_color"/>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="12dp"
-                    android:layout_weight="2.5"
-                    android:orientation="horizontal">
-
-                    <EditText
-                        android:layout_width="80dp"
-                        android:layout_height="wrap_content"
-                        android:inputType="number|numberDecimal"
-                        android:background="@drawable/gid_background"
-                        android:gravity="center"
-                        android:hint=""
-                        android:padding="5dp"
-                        android:maxLines="1"
-                        android:singleLine="true"
-                        android:imeOptions="actionNext"
-                        android:textColor="@color/text_black_color"
-                        android:textColorHint="@color/light_gray_color"
-                        android:textSize="14sp" />
-                </LinearLayout>
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:layout_marginTop="15dp"
-                android:tag="2"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="right"
-                    android:text="刺距(cm)"
-                    android:textSize="14dp"
-                    android:textColor="@color/text_black_color"/>
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="12dp"
-                    android:layout_weight="2.5"
-                    android:orientation="horizontal">
-
-                    <EditText
-                        android:layout_width="80dp"
-                        android:layout_height="wrap_content"
-                        android:inputType="number|numberDecimal"
-                        android:background="@drawable/gid_background"
-                        android:gravity="center"
-                        android:hint=""
-                        android:padding="5dp"
-                        android:maxLines="1"
-                        android:singleLine="true"
-                        android:imeOptions="actionNext"
-                        android:textColor="@color/text_black_color"
-                        android:textColorHint="@color/light_gray_color"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="*"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:textSize="14sp"
-                        android:textColor="@color/text_black_color"/>
-
-                    <EditText
-                        android:layout_width="80dp"
-                        android:layout_height="wrap_content"
-                        android:inputType="number|numberDecimal"
-                        android:background="@drawable/gid_background"
-                        android:gravity="center"
-                        android:hint=""
-                        android:padding="5dp"
-                        android:maxLines="1"
-                        android:singleLine="true"
-                        android:imeOptions="actionNext"
-                        android:textColor="@color/text_black_color"
-                        android:textColorHint="@color/light_gray_color"
-                        android:textSize="14sp" />
-                </LinearLayout>
-            </LinearLayout>
-
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:layout_marginTop="15dp"
-                android:tag="1"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="right"
-                    android:text="重量(kg)"
+                    android:text="丝径(#)"
                     android:textSize="14dp"
                     android:textColor="@color/text_black_color"/>
 
@@ -426,7 +157,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:text="价格(元/kg)"
+                    android:text="价格(元/吨)"
                     android:textSize="14dp"
                     android:textColor="@color/text_black_color"/>
 
@@ -469,7 +200,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:text="库存(kg)"
+                    android:text="库存(吨)"
                     android:textSize="14dp"
                     android:textColor="@color/text_black_color"/>
 
